Better Field remapping